--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
         text-shadow: 0 0 8px var(--accent);  
       }  
     }  
+
+    footer {  
+      text-align: center;  
+      margin-top: 3rem;  
+      font-size: 0.9rem;  
+      color: rgba(255, 255, 255, 0.5);  
+      border-top: 1px solid rgba(255, 255, 255, 0.1);  
+      padding-top: 2rem;  
+    }  
+
+    footer strong {  
+      color: var(--accent);  
+    }  
   </style>  
 </head>  
 <body>  
@@ -159,7 +172,7 @@
       <h1>Mikiyas</h1>  
       <p class="title">
         Airdrop Farmer & Video Editor | 
-        <span style="color: #ff4c4c; font-weight: 600;">Early supporter ZenChain 🛡️</span> | 
+        <span style="color: #ff4c4c; font-weight: 600;">Early Supporter zenchain 🛡️ </span> | 
         <span style="color: #a259ff; font-weight: 600;">ZenBuilder⚒️</span>
       </p>  
     </header>  
@@ -212,6 +225,11 @@
         <a href="https://github.com/mikiyas199" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>  
       </div>  
     </section>  
+
+    <footer>  
+      <p>©️ 2025 Mikiyas. All rights reserved.</p>  
+      <p>Designed & built by <strong>Mikiyas</strong></p>  
+    </footer>  
   </div>  
 </body>  
-</html>
+                                                                              </html>
