--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <h2>Contact</h2>  
       <div class="social-links">  
         <a href="https://t.me/mikiyas1999" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>  
-        <a href="https://discord.com/users/1314832941137788928" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>  
+        <a href="https://discord.com/users/mikiyas1999" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>  
         <a href="https://x.com/mikiyas1999?s=09" target="_blank" title="Twitter (X)"><i class="fab fa-twitter"></i></a>  
         <a href="https://github.com/mikiyas199" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>  
       </div>  
